--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -4,6 +4,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
+:root {
+    --fonte-destaque: 'Passion One', 'cursive';
+    --fonte-estrofes: 'Sriracha', 'cursive';
+}
 
 * {
     margin: 0;
@@ -11,18 +15,15 @@
 }
 
 header {
-    font-family: 'Passion One', 'cursive';
+    font-family: var(--fonte-destaque);
     font-weight: normal;
     text-align: center;
+    font-size: 2em;
     letter-spacing: 1.2px;
     background-color: black;
     color: white;
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
-
-header > h1 {
-    font-size: 3em;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 header  a {
@@ -32,9 +33,14 @@ header  a {
 }
 
 main {
-    font-family: 'Sriracha', 'cursive';
+    font-family: var(--fonte-estrofes);
     padding: 20px;
-    font-size: 1.5em;
+    font-size: 2.5em;
+}
+
+section.estrofe {
+    margin: 30px;
+    padding: 0px;
 }
 
 section#principal {
@@ -42,10 +48,45 @@ section#principal {
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    margin: -20px;
+    padding: 50px 50px;
 }
 
 section#principal > p {
     color: white;
-    background-color: rgba(0, 128, 0, 0.151)
-    ;
+    background-color: rgba(0, 0, 0, 0.250);
+    max-width: 470px;
+}
+
+section#principal2 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    margin: -20px;
+    padding: 50px 50px;
+}
+
+section#principal2 > p {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.250);
+    max-width: 480px;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    padding: 6px;
+}
+
+footer > p > a {
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
