--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -5,8 +5,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 :root {
-    --fonte-destaque: 'Passion One', 'cursive';
-    --fonte-estrofes: 'Sriracha', 'cursive';
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', 'cursive';
+    --fonte3: 'Sriracha', 'cursive';
 }
 
 * {
@@ -14,48 +15,69 @@
     padding: 0;
 }
 
-header {
-    font-family: var(--fonte-destaque);
-    font-weight: normal;
-    text-align: center;
-    font-size: 2em;
-    letter-spacing: 1.2px;
-    background-color: black;
-    color: white;
-    padding-top: 40px;
-    padding-bottom: 40px;
+html, body {
+    min-height: 100vh;
+    font-family: var(--fonte1);
 }
 
-header  a {
+header {
+    text-align: center;
+    background-color: black;
+    color: white;
+}
+
+header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+header a {
     color: white;
     text-decoration: none;
     font-weight: bold;
 }
 
-main {
-    font-family: var(--fonte-estrofes);
-    padding: 20px;
-    font-size: 2.5em;
+header a:hover {
+    text-decoration: underline;
 }
 
-section.estrofe {
-    margin: 30px;
-    padding: 0px;
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.2vw;
+}
+
+section > p {
+    padding-bottom: 1.5em;
+}
+
+section.imagem {
+    box-shadow: 6px 3px 11px 0px rgba(0, 0, 0, 0.267);
+}
+
+section.imagem > p {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.322);
+    text-shadow: 2px 1px 1px black;
+    display: inline-block;
+    padding: 5px;
 }
 
 section#principal {
     background-image: url('../imagens/background001.jpg');
     background-position: center center;
+    background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    margin: -20px;
-    padding: 50px 50px;
-}
-
-section#principal > p {
-    color: white;
-    background-color: rgba(0, 0, 0, 0.250);
-    max-width: 470px;
 }
 
 section#principal2 {
@@ -63,14 +85,6 @@ section#principal2 {
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    margin: -20px;
-    padding: 50px 50px;
-}
-
-section#principal2 > p {
-    color: white;
-    background-color: rgba(0, 0, 0, 0.250);
-    max-width: 480px;
 }
 
 footer {
